--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -16,6 +16,7 @@
   </li>
 </ul>
 
+<!-- detail -->
 <div *ngIf="selectedHero">
     <h2>{{selectedHero.name | uppercase}} Details</h2>
     <div>id: {{selectedHero.id}}</div>
@@ -24,3 +25,4 @@
       <input id="hero-name" [(ngModel)]="selectedHero.name" placeholder="name">
     </div>
   </div>
+  <!-- detail -->
